--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -12,6 +12,8 @@
 }
 
 .onebigsection{
-    background: url(/Assets/images/trollface.jpg)
+    background: url(/Assets/images/trollface.jpg);
+    background-size: cover;
+    background-position: center;
 }
 
