--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -12,7 +12,7 @@
 }
 
 .onebigsection{
-    background: url(/Assets/images/trollface.jpg);
+    background: red;
     background-size: cover;
     background-position: center;
 }
